messaging_app/messaging_app/blue_deployment.yaml
# blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
      - name: django-app
        image: your-dockerhub-username/django-messaging-app:latest
        ports:
        - containerPort: 8000
