messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
      - name: django-messaging-app
        image: your-dockerhub-username/django-messaging-app:latest
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-messaging-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
